--- a/frontend/web/uw/sass/renovation.scss
+++ b/frontend/web/uw/sass/renovation.scss
@@ -1,7 +1,7 @@
 .renovation {
 	color: #010211;
 	.top_block {
-		padding-top: 0px;
+		padding-top: 0;
 	}
 	
 	h1 {
@@ -36,6 +36,12 @@
 			padding-right: 20px;
 		}
 	}
+	select:focus {
+		outline: none;
+		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+		-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+		box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+	}
 	.select_area {
 		font-size: 15px;
 		padding-top: 51px;
@@ -48,14 +54,14 @@
 		}
 		a {
 			font-size: 15px;
-			border-radius: 0px;
+			border-radius: 0;
     		line-height: 39px;
-    		padding: 0px 18px;
+    		padding: 0 18px;
     		margin-left: 16px;
     		@media screen and (max-width: 639px) {
 				display: block;
 				margin-bottom: 5px;
-				margin-left: 0px;
+				margin-left: 0;
 			}
 			&.include {
 				color: white;
@@ -103,7 +109,7 @@
 			display: none;
 		}
 		input {
-			border-radius: 0px;
+			border-radius: 0;
 		}
 		table {
 			border: 1px solid transparent;
@@ -155,6 +161,15 @@
 			th {
 				border: 1px solid transparent;
 			}
+			th:nth-child(1) {
+				width: 131px;
+			}
+			th:nth-child(2) {
+				width: 191px;
+			}
+			th:nth-child(3) {
+				width: 621px;
+			}
 			tbody {
 				tr {
 					&:nth-child(2n-1) {
@@ -195,7 +210,7 @@
 				font-size: 20px;
 			}
 			li {
-				margin: 0px 4px;
+				margin: 0 4px;
 				display: inline-block;
 				a {
 					font-size: 15px;
@@ -204,7 +219,7 @@
 					display: inline-block;
 					border: 1px solid #A1A6AF;
 					color: #010211;
-					padding: 0px;
+					padding: 0;
 					text-align: center;
 				}
 				&.active {
@@ -229,5 +244,21 @@
 				}
 			}
 		}
+	}
+}
+.asc::after {
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+	transform: rotate(180deg);
+}
+@media (max-width: 767px){
+	#p0 {
+		width: 100%;
+		overflow-y: auto;
+	}
+	#grid_ {
+		width: 767px;
 	}
 }
