--- a/frontend/web/uw/sass/timeline.scss
+++ b/frontend/web/uw/sass/timeline.scss
@@ -65,6 +65,7 @@
 		
 			&.active .date .date-item {
 				font: 33px 'Proxima Nova Bl', sans-serif;
+				font-weight: bold;
 				line-height: 30px;
 				color: #C59D17;
 			}
@@ -395,17 +396,27 @@ $scrollBarHeight: 0px;
 		padding-bottom: 80px;
 		.fl {
 			left: 2px;
-			top: 20%;
+			top: 50%;
 			width: 55px;
 			height: 55px;
 			margin: 0 !important;
+			-webkit-transform: translateY(-50%);
+			-moz-transform: translateY(-50%);
+			-ms-transform: translateY(-50%);
+			-o-transform: translateY(-50%);
+			transform: translateY(-50%);
 		}
 		.fr {
 			right: 2px;
-			top: 20%;
+			top: 50%;
 			width: 55px;
 			height: 55px;
 			margin: 0 !important;
+			-webkit-transform: translateY(-50%);
+			-moz-transform: translateY(-50%);
+			-ms-transform: translateY(-50%);
+			-o-transform: translateY(-50%);
+			transform: translateY(-50%);
 		}
 		.fl.active, .fr.active {
 			opacity: .5;
